--- a/.github/workflows/pull-requests.yml
+++ b/.github/workflows/pull-requests.yml
@@ -20,17 +20,8 @@ jobs:
             - name: Install dependencies
               run: yarn
 
-            - name: Compile contracts
-              run: yarn compile:contracts
-
-            - name: Build libraries
-              run: yarn build:libraries
-
-            - name: Run Prettier
-              run: yarn prettier
-
-            - name: Run Eslint
-              run: yarn lint
+            - name: Build | Lint | Format
+              run: yarn style
 
     test:
         runs-on: ubuntu-latest
@@ -58,8 +49,6 @@ jobs:
             - name: Install dependencies
               run: yarn
 
-            - name: Build libraries and contracts
-              run: yarn build
-
+            # test script runs turbo tasks that dependsOn build, so build will be taken care of automatically
             - name: Test libraries, contracts and circuits
               run: yarn test
