fix: update turbo.json
reorder `dependsOn` tasks
exclude `build` task from `style` script

--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "private": true,
     "scripts": {
         "build": "turbo build",
-        "build:libraries": "yarn workspaces foreach -A -t --no-private run build",
-        "test": "turbo test:libraries test:circuits test:coverage",
-        "test:libraries": "jest --coverage",
+        "_build:libraries": "yarn workspaces foreach -A -t --no-private run build",
+        "build:libraries": "turbo _build:libraries",
+        "test": "turbo _test:libraries _test:circuits test:coverage",
+        "_test:libraries": "jest --coverage",
+        "test:libraries": "turbo _test:libraries",
         "test:library": "jest packages/${0}",
-        "test:circuits": "yarn workspace @zk-kit/circuits test",
+        "_test:circuits": "yarn workspace @zk-kit/circuits test",
+        "test:circuits": "turbo _test:circuits",
         "test:contracts": "turbo test:coverage",
         "version:bump": "yarn workspace @zk-kit/${0} version ${1} && yarn remove:stable-version-field ${0} && NO_HOOK=1 git commit -am \"chore(${0}): v${1}\" && git tag ${0}-v${1}",
         "version:publish": "yarn workspaces foreach -A --no-private npm publish --tolerate-republish --access public",
@@ -28,7 +31,7 @@
         "remove:stable-version-field": "ts-node scripts/remove-stable-version-field.ts ${0} && yarn prettier:write",
         "precommit": "lint-staged",
         "postinstall": "husky install",
-        "style": "turbo build lint:eslint lint format:prettier"
+        "style": "turbo lint:eslint lint format:prettier"
     },
     "keywords": [
         "javascript",
