--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -3,7 +3,7 @@ name: production
 on:
     push:
         branches:
-            - main
+            - chore/turbo-prod-action-test
 
 jobs:
     style:
