--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
         "eslint-plugin-import": "^2.29.1",
         "eslint-plugin-jest": "^27.9.0",
         "husky": "^9.0.11",
-        "jest": "^29.7.0",
+        "jest": "30.0.0-alpha.1",
         "jest-config": "^29.7.0",
         "lint-staged": "^15.2.2",
         "prettier": "^3.2.5",
