--- a/packages/circuits/noir/Nargo.toml
+++ b/packages/circuits/noir/Nargo.toml
@@ -1,2 +1,7 @@
 [workspace]
-members = ["crates/smt_pedersen", "crates/smt_poseidon", "crates/smt_poseidon2"]
+members = [
+    "sparse_mt_pedersen",
+    "sparse_mt_poseidon",
+    "sparse_mt_poseidon2",
+    "merkle_tree",
+]
