--- a/packages/poseidon-proof/package.json
+++ b/packages/poseidon-proof/package.json
@@ -51,6 +51,7 @@
         "@ethersproject/bignumber": "^5.7.0",
         "@ethersproject/bytes": "^5.7.0",
         "@ethersproject/keccak256": "^5.7.0",
+        "@zk-kit/utils": "workspace:^",
         "snarkjs": "^0.7.3"
     }
 }
