--- a/.github/workflows/pull-requests.yml
+++ b/.github/workflows/pull-requests.yml
@@ -45,6 +45,8 @@ jobs:
 
             - name: Install Nargo
               uses: noir-lang/noirup@v0.1.3
+              with:
+                  toolchain: nightly
 
             - name: Install dependencies
               run: yarn
