--- a/packages/poseidon/package.json
+++ b/packages/poseidon/package.json
@@ -16,84 +16,84 @@
             "default": "./dist/index.js"
         },
         "./1": {
-            "types": "./dist/types/poseidon-1/index.d.ts",
-            "require": "./dist/lib.commonjs/poseidon-1/index.cjs",
-            "default": "./dist/lib.esm/poseidon-1/index.js"
+            "types": "./dist/types/1/index.d.ts",
+            "require": "./dist/lib.commonjs/1/index.cjs",
+            "default": "./dist/lib.esm/1/index.js"
         },
         "./2": {
-            "types": "./dist/types/poseidon-2/index.d.ts",
-            "require": "./dist/lib.commonjs/poseidon-2/index.cjs",
-            "default": "./dist/lib.esm/poseidon-2/index.js"
+            "types": "./dist/types/2/index.d.ts",
+            "require": "./dist/lib.commonjs/2/index.cjs",
+            "default": "./dist/lib.esm/2/index.js"
         },
         "./3": {
-            "types": "./dist/types/poseidon-3/index.d.ts",
-            "require": "./dist/lib.commonjs/poseidon-3/index.cjs",
-            "default": "./dist/lib.esm/poseidon-3/index.js"
+            "types": "./dist/types/3/index.d.ts",
+            "require": "./dist/lib.commonjs/3/index.cjs",
+            "default": "./dist/lib.esm/3/index.js"
         },
         "./4": {
-            "types": "./dist/types/poseidon-4/index.d.ts",
-            "require": "./dist/lib.commonjs/poseidon-4/index.cjs",
-            "default": "./dist/lib.esm/poseidon-4/index.js"
+            "types": "./dist/types/4/index.d.ts",
+            "require": "./dist/lib.commonjs/4/index.cjs",
+            "default": "./dist/lib.esm/4/index.js"
         },
         "./5": {
-            "types": "./dist/types/poseidon-5/index.d.ts",
-            "require": "./dist/lib.commonjs/poseidon-5/index.cjs",
-            "default": "./dist/lib.esm/poseidon-5/index.js"
+            "types": "./dist/types/5/index.d.ts",
+            "require": "./dist/lib.commonjs/5/index.cjs",
+            "default": "./dist/lib.esm/5/index.js"
         },
         "./6": {
-            "types": "./dist/types/poseidon-6/index.d.ts",
-            "require": "./dist/lib.commonjs/poseidon-6/index.cjs",
-            "default": "./dist/lib.esm/poseidon-6/index.js"
+            "types": "./dist/types/6/index.d.ts",
+            "require": "./dist/lib.commonjs/6/index.cjs",
+            "default": "./dist/lib.esm/6/index.js"
         },
         "./7": {
-            "types": "./dist/types/poseidon-7/index.d.ts",
-            "require": "./dist/lib.commonjs/poseidon-7/index.cjs",
-            "default": "./dist/lib.esm/poseidon-7/index.js"
+            "types": "./dist/types/7/index.d.ts",
+            "require": "./dist/lib.commonjs/7/index.cjs",
+            "default": "./dist/lib.esm/7/index.js"
         },
         "./8": {
-            "types": "./dist/types/poseidon-8/index.d.ts",
-            "require": "./dist/lib.commonjs/poseidon-8/index.cjs",
-            "default": "./dist/lib.esm/poseidon-8/index.js"
+            "types": "./dist/types/8/index.d.ts",
+            "require": "./dist/lib.commonjs/8/index.cjs",
+            "default": "./dist/lib.esm/8/index.js"
         },
         "./9": {
-            "types": "./dist/types/poseidon-9/index.d.ts",
-            "require": "./dist/lib.commonjs/poseidon-9/index.cjs",
-            "default": "./dist/lib.esm/poseidon-9/index.js"
+            "types": "./dist/types/9/index.d.ts",
+            "require": "./dist/lib.commonjs/9/index.cjs",
+            "default": "./dist/lib.esm/9/index.js"
         },
         "./10": {
-            "types": "./dist/types/poseidon-10/index.d.ts",
-            "require": "./dist/lib.commonjs/poseidon-10/index.cjs",
-            "default": "./dist/lib.esm/poseidon-10/index.js"
+            "types": "./dist/types/10/index.d.ts",
+            "require": "./dist/lib.commonjs/10/index.cjs",
+            "default": "./dist/lib.esm/10/index.js"
         },
         "./11": {
-            "types": "./dist/types/poseidon-11/index.d.ts",
-            "require": "./dist/lib.commonjs/poseidon-11/index.cjs",
-            "default": "./dist/lib.esm/poseidon-11/index.js"
+            "types": "./dist/types/11/index.d.ts",
+            "require": "./dist/lib.commonjs/11/index.cjs",
+            "default": "./dist/lib.esm/11/index.js"
         },
         "./12": {
-            "types": "./dist/types/poseidon-12/index.d.ts",
-            "require": "./dist/lib.commonjs/poseidon-12/index.cjs",
-            "default": "./dist/lib.esm/poseidon-12/index.js"
+            "types": "./dist/types/12/index.d.ts",
+            "require": "./dist/lib.commonjs/12/index.cjs",
+            "default": "./dist/lib.esm/12/index.js"
         },
         "./13": {
-            "types": "./dist/types/poseidon-13/index.d.ts",
-            "require": "./dist/lib.commonjs/poseidon-13/index.cjs",
-            "default": "./dist/lib.esm/poseidon-13/index.js"
+            "types": "./dist/types/13/index.d.ts",
+            "require": "./dist/lib.commonjs/13/index.cjs",
+            "default": "./dist/lib.esm/13/index.js"
         },
         "./14": {
-            "types": "./dist/types/poseidon-14/index.d.ts",
-            "require": "./dist/lib.commonjs/poseidon-14/index.cjs",
-            "default": "./dist/lib.esm/poseidon-14/index.js"
+            "types": "./dist/types/14/index.d.ts",
+            "require": "./dist/lib.commonjs/14/index.cjs",
+            "default": "./dist/lib.esm/14/index.js"
         },
         "./15": {
-            "types": "./dist/types/poseidon-15/index.d.ts",
-            "require": "./dist/lib.commonjs/poseidon-15/index.cjs",
-            "default": "./dist/lib.esm/poseidon-15/index.js"
+            "types": "./dist/types/15/index.d.ts",
+            "require": "./dist/lib.commonjs/15/index.cjs",
+            "default": "./dist/lib.esm/15/index.js"
         },
         "./16": {
-            "types": "./dist/types/poseidon-16/index.d.ts",
-            "require": "./dist/lib.commonjs/poseidon-16/index.cjs",
-            "default": "./dist/lib.esm/poseidon-16/index.js"
+            "types": "./dist/types/16/index.d.ts",
+            "require": "./dist/lib.commonjs/16/index.cjs",
+            "default": "./dist/lib.esm/16/index.js"
         }
     },
     "files": [
@@ -121,7 +121,8 @@
         "circomlibjs": "0.0.8",
         "rimraf": "^5.0.5",
         "rollup": "^4.12.0",
-        "rollup-plugin-cleanup": "^3.2.1"
+        "rollup-plugin-cleanup": "^3.2.1",
+        "rollup-plugin-polyfill-node": "^0.13.0"
     },
     "dependencies": {
         "@noble/curves": "1.4.0",
