--- a/packages/eddsa-proof/package.json
+++ b/packages/eddsa-proof/package.json
@@ -54,7 +54,7 @@
         "@ethersproject/bytes": "^5.7.0",
         "@ethersproject/keccak256": "^5.7.0",
         "@zk-kit/eddsa-poseidon": "0.11.0",
-        "@zk-kit/utils": "1.0.0-beta",
+        "@zk-kit/utils": "1.0.0-beta.1",
         "snarkjs": "^0.7.3"
     }
 }
