--- a/packages/imt/package.json
+++ b/packages/imt/package.json
@@ -42,5 +42,8 @@
         "rimraf": "^5.0.5",
         "rollup": "^4.12.0",
         "rollup-plugin-cleanup": "^3.2.1"
+    },
+    "dependencies": {
+        "@zk-kit/utils": "1.0.0-beta.1"
     }
 }
