--- a/packages/imt/package.json
+++ b/packages/imt/package.json
@@ -35,13 +35,15 @@
         "access": "public"
     },
     "devDependencies": {
+        "@rollup/plugin-node-resolve": "^15.2.3",
         "@rollup/plugin-terser": "^0.4.4",
         "@rollup/plugin-typescript": "^11.1.6",
         "incrementalquintree": "^1.0.9",
         "poseidon-lite": "^0.2.0",
         "rimraf": "^5.0.5",
         "rollup": "^4.12.0",
-        "rollup-plugin-cleanup": "^3.2.1"
+        "rollup-plugin-cleanup": "^3.2.1",
+        "rollup-plugin-polyfill-node": "^0.13.0"
     },
     "dependencies": {
         "@zk-kit/utils": "1.0.0-beta.1"
