--- a/packages/eddsa-proof/package.json
+++ b/packages/eddsa-proof/package.json
@@ -9,12 +9,8 @@
     "exports": {
         ".": {
             "types": "./dist/types/index.d.ts",
-            "node": {
-                "require": "./dist/index.node.cjs",
-                "default": "./dist/index.node.js"
-            },
-            "browser": "./dist/index.browser.js",
-            "default": "./dist/index.browser.js"
+            "require": "./dist/index.cjs",
+            "default": "./dist/index.js"
         }
     },
     "files": [
