--- a/.github/workflows/pull-requests.yml
+++ b/.github/workflows/pull-requests.yml
@@ -46,7 +46,7 @@ jobs:
             - name: Install Nargo
               uses: noir-lang/noirup@v0.1.3
               with:
-                  toolchain: nightly
+                  toolchain: 0.26.0
 
             - name: Install dependencies
               run: yarn
