--- a/.github/workflows/pull-requests.yml
+++ b/.github/workflows/pull-requests.yml
@@ -25,6 +25,12 @@ jobs:
 
     test:
         runs-on: ubuntu-latest
+        strategy:
+            matrix:
+                type:
+                    - circuits
+                    - contracts
+                    - libraries
 
         steps:
             - name: Checkout
@@ -51,6 +57,8 @@ jobs:
             - name: Install dependencies
               run: yarn
 
-            # test script runs turbo tasks that dependsOn build, so build will be taken care of automatically
-            - name: Test libraries, contracts and circuits
-              run: yarn test
+            - name: Build libraries and contracts
+              run: yarn build
+
+            - name: Test ${{ matrix.type }}
+              run: yarn test:${{ matrix.type }}
