ci: add dynamic `matrix.type` var to job step name in prod workflow

--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -61,7 +61,7 @@ jobs:
             - name: Build libraries and contracts
               run: yarn build
 
-            - name: Test libraries, contracts and circuits
+            - name: Test ${{ matrix.type }}
               run: yarn test:${{ matrix.type }}
 
             - name: Coveralls
