--- a/packages/circuits/package.json
+++ b/packages/circuits/package.json
@@ -23,7 +23,7 @@
     "devDependencies": {
         "@types/mocha": "^10.0.6",
         "@zk-kit/baby-jubjub": "1.0.0-beta",
-        "@zk-kit/eddsa-poseidon": "0.11.0",
+        "@zk-kit/eddsa-poseidon": "1.0.0-beta",
         "@zk-kit/poseidon-cipher": "0.3.0",
         "@zk-kit/smt": "1.0.0",
         "@zk-kit/utils": "1.0.0-beta.4",
