--- a/packages/eddsa-proof/package.json
+++ b/packages/eddsa-proof/package.json
@@ -47,7 +47,7 @@
         "@ethersproject/bignumber": "^5.7.0",
         "@ethersproject/bytes": "^5.7.0",
         "@ethersproject/keccak256": "^5.7.0",
-        "@zk-kit/eddsa-poseidon": "0.11.0",
+        "@zk-kit/eddsa-poseidon": "1.0.0-beta",
         "@zk-kit/utils": "1.0.0-beta.4",
         "snarkjs": "^0.7.3"
     }
