--- a/.github/workflows/pull-requests.yml
+++ b/.github/workflows/pull-requests.yml
@@ -3,6 +3,10 @@ name: pull-requests
 on:
     pull_request:
 
+concurrency:
+    group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
+    cancel-in-progress: true
+
 jobs:
     style:
         runs-on: ubuntu-latest
@@ -26,6 +30,7 @@ jobs:
     test:
         runs-on: ubuntu-latest
         strategy:
+            fail-fast: false
             matrix:
                 type:
                     - circuits
@@ -45,6 +50,7 @@ jobs:
             # https://github.com/iden3/circuits/blob/8fffb6609ecad0b7bcda19bb908bdb544bdb3cf7/.github/workflows/main.yml#L18-L22
             # https://stackoverflow.com/a/78377916
             - name: Setup Circom deps
+              if: matrix.type != 'libraries'
               run: |
                   sudo rm /etc/apt/sources.list.d/microsoft-prod.list
                   sudo apt-get update && sudo apt-get install -y wget nlohmann-json3-dev libgmp-dev nasm g++ build-essential
