--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -4,6 +4,7 @@ on:
     push:
         branches:
             - main
+    pull_request:
 
 jobs:
     gh-pages:
@@ -11,12 +12,12 @@ jobs:
 
         steps:
             - name: Checkout
-              uses: actions/checkout@v3
+              uses: actions/checkout@v4
 
             - name: Setup Node
-              uses: actions/setup-node@v3
+              uses: actions/setup-node@v4
               with:
-                  node-version: "18"
+                  node-version: "20"
                   cache: "yarn"
 
             - name: Install dependencies
@@ -29,6 +30,7 @@ jobs:
               run: yarn docs
 
             - name: Publish on Github Pages
+              if: github.event_name == 'push' && github.ref == 'refs/heads/main'
               uses: crazy-max/ghaction-github-pages@v2.5.0
               with:
                   build_dir: docs
