--- a/packages/poseidon-proof/package.json
+++ b/packages/poseidon-proof/package.json
@@ -44,10 +44,8 @@
         "rollup-plugin-cleanup": "^3.2.1"
     },
     "dependencies": {
-        "@ethersproject/bignumber": "^5.7.0",
-        "@ethersproject/bytes": "^5.7.0",
-        "@ethersproject/keccak256": "^5.7.0",
         "@zk-kit/utils": "1.0.0-beta.4",
+        "ethers": "^6.12.0",
         "snarkjs": "^0.7.3"
     }
 }
