--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,4 +1,4 @@
 {
-    "**/*.{js,ts}": "eslint --fix",
-    "*": ["prettier --write"]
+    "**/*.{js,ts,jsx,tsx,md,json,sol}": "prettier --write",
+    "**/*.{js,ts,jsx,tsx}": "eslint"
 }
