--- a/packages/eddsa-proof/package.json
+++ b/packages/eddsa-proof/package.json
@@ -44,7 +44,7 @@
         "rollup-plugin-cleanup": "^3.2.1"
     },
     "dependencies": {
-        "@zk-kit/eddsa-poseidon": "1.0.0-beta",
+        "@zk-kit/eddsa-poseidon": "1.0.0",
         "@zk-kit/utils": "1.0.0-beta.4",
         "ethers": "^6.12.0",
         "snarkjs": "^0.7.3"
