--- a/packages/lean-imt/package.json
+++ b/packages/lean-imt/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@zk-kit/lean-imt",
-    "version": "2.0.0-beta.4",
+    "version": "2.0.0",
     "description": "Lean Incremental Merkle tree implementation in TypeScript.",
     "type": "module",
     "license": "MIT",
