--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -23,14 +23,23 @@ jobs:
             - name: Install dependencies
               run: yarn
 
-            - name: Build libraries
-              run: yarn build:libraries
+            - name: Get changed files
+              id: changed-files
+              uses: tj-actions/changed-files@v44
+              with:
+                  files: |
+                      packages/**/src/*.{ts,js}
 
-            - name: Generate doc website
+            - if: steps.changed-files.outputs.any_changed == 'true'
+              name: Build libraries
+              run: yarn build
+
+            - if: steps.changed-files.outputs.any_changed == 'true'
+              name: Generate doc website
               run: yarn docs
 
-            - name: Publish on Github Pages
-              if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+            - if: steps.changed-files.outputs.any_changed == 'true' && github.event_name == 'push' && github.ref == 'refs/heads/main'
+              name: Publish on Github Pages
               uses: crazy-max/ghaction-github-pages@v2.5.0
               with:
                   build_dir: docs
