--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,14 @@
-name: production
+name: main
 
 on:
     push:
         branches:
             - main
+    pull_request:
+
+concurrency:
+    group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
+    cancel-in-progress: true
 
 jobs:
     style:
@@ -24,14 +29,8 @@ jobs:
 
             - name: Build | Lint | Format
               run: yarn style
-    test:
+    tests:
         runs-on: ubuntu-latest
-        strategy:
-            fail-fast: false
-            matrix:
-                type:
-                    - contracts
-                    - libraries
 
         steps:
             - name: Checkout
@@ -46,27 +45,24 @@ jobs:
             - name: Install dependencies
               run: yarn
 
-            - name: Build libraries and contracts
+            - name: Get changed files
+              id: changed-files
+              uses: tj-actions/changed-files@v44
+              with:
+                  files: |
+                      packages/**/src/*.{ts,js}
+                      packages/**/tests/*.{ts,js}
+
+            - if: steps.changed-files.outputs.any_changed == 'true'
+              name: Build libraries
               run: yarn build
 
-            - name: Test ${{ matrix.type }}
-              run: yarn test:${{ matrix.type }}
+            - if: steps.changed-files.outputs.any_changed == 'true'
+              name: Test libraries
+              run: yarn test
 
+            - if: steps.changed-files.outputs.any_changed == 'true' && github.event_name == 'push' && github.ref == 'refs/heads/main'
             - name: Coveralls
               uses: coverallsapp/github-action@master
               with:
                   github-token: ${{ secrets.GITHUB_TOKEN }}
-                  flag-name: run-${{ matrix.type }}
-                  path-to-lcov: ./coverage/${{ matrix.type }}/lcov.info
-                  parallel: true
-
-    coverage:
-        runs-on: ubuntu-latest
-        needs: test
-
-        steps:
-            - name: Coveralls Finished
-              uses: coverallsapp/github-action@master
-              with:
-                  github-token: ${{ secrets.GITHUB_TOKEN }}
-                  parallel-finished: true
