--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "_build": "yarn workspaces foreach -A -t --no-private run build",
         "build": "turbo _build",
         "_test": "jest --coverage",
-        "test": "turbo _test:libraries",
+        "test": "turbo _test",
         "test:library": "jest packages/${0}",
         "version:bump": "yarn workspace @zk-kit/${0} version ${1} && yarn remove:stable-version-field ${0} && NO_HOOK=1 git commit -am \"chore(${0}): v${1}\" && git tag ${0}-v${1}",
         "version:publish": "yarn workspaces foreach -A --no-private npm publish --tolerate-republish --access public",
