--- a/turbo.json
+++ b/turbo.json
@@ -18,7 +18,7 @@
                 "**/build.tsconfig.json",
                 "**/rollup.config.ts",
                 "packages/**/*.{js,json,ts}",
-                "!packages/**/{dist}/**"
+                "!packages/**/dist/**"
             ]
         },
         "//#_test": {
