--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -4,7 +4,11 @@ on:
     push:
         branches:
             - main
+        paths:
+            - packages/**/src/*.{ts,js}
     pull_request:
+        paths:
+            - packages/**/src/*.{ts,js}
 
 jobs:
     gh-pages:
@@ -23,22 +27,13 @@ jobs:
             - name: Install dependencies
               run: yarn
 
-            - name: Get changed files
-              id: changed-files
-              uses: tj-actions/changed-files@v44
-              with:
-                  files: |
-                      packages/**/src/*.{ts,js}
-
-            - if: steps.changed-files.outputs.any_changed == 'true'
-              name: Build libraries
+            - name: Build libraries
               run: yarn build
 
-            - if: steps.changed-files.outputs.any_changed == 'true'
-              name: Generate doc website
+            - name: Generate doc website
               run: yarn docs
 
-            - if: steps.changed-files.outputs.any_changed == 'true' && github.event_name == 'push' && github.ref == 'refs/heads/main'
+            - if: github.event_name == 'push' && github.ref == 'refs/heads/main'
               name: Publish on Github Pages
               uses: crazy-max/ghaction-github-pages@v2.5.0
               with:
