--- a/packages/poseidon-proof/package.json
+++ b/packages/poseidon-proof/package.json
@@ -44,6 +44,7 @@
         "rollup-plugin-cleanup": "^3.2.1"
     },
     "dependencies": {
+        "@zk-kit/artifacts": "^1.3.1",
         "@zk-kit/utils": "1.0.0-beta.4",
         "ethers": "^6.12.0",
         "snarkjs": "^0.7.3"
